go_webpages/k8s_deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go-web-deploy
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
      - name: go-web
        image: registry.au-syd.bluemix.net/takara/go_webserver:v1
        ports:
        - containerPort: 4040
