go_webpages/k8s_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: go-web-svc
spec:
  type: ClusterIP
  selector:
    app: go-web
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 4040
